# Noppo

./: Comments_from_fb.csv  Pipfile  README.md  drama_complete_df.csv  drama_list.txt  environment.yml  firebase_importing.ipynb  netflix-comment-system-firebase-adminsdk-hq5cn-9c691199bd.json  netflix_comment.py  package.txt  pyproject.toml  requirements.txt  stopwords.txt
.devcontainer/: devcontainer.json
scraping modules/: IMDb_scrape.py  douban_scrape.py  facebook_scrape.py  rottentomatoes_scrape.py
